dashboard page layout

--- a/page-dev/home.html
+++ b/page-dev/home.html
@@ -31,7 +31,7 @@
                 <a href="#!" class="brand-logo chance grey-text text-darken-4">Ye' Olde Tech Blog</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down roboto four">
-                    <li><a class="grey-text text-darken-4" href="sass.html">Home</a></li>
+                    <li class="active"><a class="grey-text text-darken-4" href="sass.html">Home</a></li>
                     <li><a class="grey-text text-darken-4" href="badges.html">Dashboard</a></li>
                     <li><a class="grey-text text-darken-4" href="collapsible.html">Login</a></li>
                     <li class="hide"><a href="mobile.html">Logout</a></li>
@@ -102,6 +102,8 @@
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="javscript/script.js"></script>
 </body>
 
 </html>
