--- a/page-dev/login.html
+++ b/page-dev/login.html
@@ -49,9 +49,11 @@
             <li class="hide"><a href="mobile.html">Logout</a></li>
         </ul>
     </header>
-    <video id="videoBG" autoplay muted loop>
-        <source src="video/lines.mp4" type="video/mp4">
-    </video>
+    <div class="animate__animated animate__fadeIn">
+        <video id="videoBG" autoplay muted loop>
+            <source src="video/lines.mp4" type="video/mp4">
+        </video>
+    </div>
     <main class="container animate__animated animate__fadeIn m-5-top">
         <div class="row border-grey corner-med p-1">
             <form class="col s12">
