--- a/page-dev/read.html
+++ b/page-dev/read.html
@@ -50,7 +50,7 @@
             <li class="hide"><a href="mobile.html">Logout</a></li>
         </ul>
     </header>
-    <video id="videoBG-ink" autoplay muted loop>
+    <video id="videoBG-ink" class="animate__animated animate__fadeIn" autoplay muted loop>
         <source src="video/ink.mp4" type="video/mp4">
     </video>
     <main class="container animate__animated animate__fadeIn m-5-top reading">
