--- a/page-dev/home.html
+++ b/page-dev/home.html
@@ -46,9 +46,12 @@
             <li class="hide"><a href="mobile.html">Logout</a></li>
         </ul>
     </header>
-    <video id="videoBG" poster="poster.JPG" autoplay muted loop>
-        <source src="video/dissolve.mp4" type="video/mp4">
-    </video>
+    <div class="animate__animated animate__fadeIn">
+        <video id="videoBG" poster="poster.JPG" autoplay muted loop>
+            <source src="video/dissolve.mp4" type="video/mp4">
+        </video>
+    </div>
+
     <main class="container animate__animated animate__fadeIn">
         <div class="row m-5-top">
             <div class="col s3 border-grey corner-med charter grey-text text-lighten-2 p-1">
